--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,14 +1,14 @@
-sonar.projectKey=Z_A
-sonar.projectName=A
+sonar.projectKey=AnastasiaBrinati_testTravis
+sonar.projectName=testTravis
 
 # =====================================================
 #   Meta-data for the project
 # =====================================================
 
-sonar.links.homepage=https://github.com/Z/A
-sonar.links.ci=https://travis-ci.org/Z/A
-sonar.links.scm=https://github.com/Z/A
-sonar.links.issue=https://github.com/Z/A/issues
+sonar.links.homepage=https://github.com/AnastasiaBrinati/testTravis
+sonar.links.ci=https://travis-ci.org/AnastasiaBrinati/testTravis
+sonar.links.scm=https://github.com/AnastasiaBrinati/testTravis
+sonar.links.issue=https://github.com/AnastasiaBrinati/testTravis/issues
 
 
 # =====================================================
@@ -16,8 +16,8 @@ sonar.links.issue=https://github.com/Z/A/issues
 # =====================================================
 
 sonar.host.url=https://sonarcloud.io
-sonar.organization=Z
-sonar.login=Y
+sonar.organization=AnastasiaBrinati
+sonar.login=00f67a4b9468a565e9659e03c7f6c240164effb7
 sonar.sources=src
 sonar.language=java
 
