--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,5 @@ sonarcloud:
 organization: "AnastasiaBrinati"
 token: "00f67a4b9468a565e9659e03c7f6c240164effb7"
 script:
-- ant build
-- sonar-scanner
+// - ant build
+   - sonar-scanner
