--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -16,8 +16,8 @@ sonar.links.issue=https://github.com/AnastasiaBrinati/testTravis/issues
 # =====================================================
 
 sonar.host.url=https://sonarcloud.io
-sonar.organization=bnastasiabrinati
-sonar.login=891dbfe326ea8f2dfb4223707e86145cecb83097
+sonar.organization=anastasiabrinati
+sonar.login= a19843aa4a8f4812087eaadc0e025d470e64bfcb
 sonar.sources=src
 sonar.language=java
 
