--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,10 @@
 language: java
 jdk:
-- openjdk15
+  -openjdk15
 addons:
-sonarcloud:
-organization: "bnastasiabrinati"
-token: "891dbfe326ea8f2dfb4223707e86145cecb83097"
+  sonarcloud:
+    organization: "anastasiabrinati"
+    token: "a19843aa4a8f4812087eaadc0e025d470e64bfcb"
 script:
-   - ant build
-   - sonar-scanner
+  - ant build
+  - sonar-scanner
